fix lyouts and aligns of score modal

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -18,17 +18,19 @@ body {
   height: 100vh;
 }
 
+section {
+  width: 100%;
+  height: 100%;
+}
+
 nav {
   width: 100%;
   padding: 10px;
-  margin-top: -50px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   color:rgb(137, 127, 11);
 }
-
-
 
 .card-grid {
   display: grid;
